--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,8 +4,8 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Academic # Website name
-baseurl: '' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+baseurl: 'elated-mestorf-558430.netlify.app' # Website URL
+copyright: 'copyright 2021 Jaelyn Bos' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
@@ -74,3 +74,5 @@ related:
       weight: 100
     - name: categories
       weight: 70
+header:
+  image: "header.jpg"
